# vala-emscripten

./: .gitattributes  .gitignore  CMakeLists.txt  Cakefile  Cakefile.1  Makefile  Makefile.1  Makefile.coffee  build  build.sh  ccode.coffee  desktop.c  desktop.sh  desktop.vala  entitas.json  entitas.sh  entities.md  fixref  fixref.coffee  gulpfile.js  index.js  launch.json  licenses.md  meson.build  meson_options.txt  notes.md  package.json  package.jsonz  pseudo.coffee  readme.md  shmupwarz.data  shmupwarz.html  shmupwarz.js  shmupwarz.wasm  tasks.json  test.coffee  test.js  vala-emscripten.avprj  valac2.vala
c/src/: components.c  game.c
data/: CMakeLists.txt  resources.gresource.xml
data/local/: CMakeLists.txt
doc/: CMakeLists.txt
include/: glib.h  glibconfig.h  readme.md
include/glib/: gatomic.1.h  gmem.h  gmessages.h  gnode.h  gquark.h  gslice.h  gstrfuncs.h  gstring.h  gtestutils.h  gthread.h  misc.h
install/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
install/data/: CTestTestfile.cmake  Makefile  cmake_install.cmake  resources.gresource.xml.c
install/po/: CTestTestfile.cmake  Makefile  cmake_install.cmake
install/src/: CTestTestfile.cmake  Config.c  Config.vala  Factory.c  Game.c  Makefile  cmake_install.cmake  components.c  main.c  vala-emscripten  vala-emscripten.c
install/src/entitas/: CTestTestfile.cmake  Cache.c  Group.c  Makefile  Matcher.c  cmake_install.cmake  entitas.c
install/src/sdx/: CTestTestfile.cmake  Color.c  Makefile  cmake_install.cmake  sdx.c
install/src/sdx/files/: CTestTestfile.cmake  Makefile  cmake_install.cmake
install/src/sdx/graphics/: CTestTestfile.cmake  Makefile  Sprite.c  Surface.c  TextureAtlas.c  cmake_install.cmake
install/src/systems/: CTestTestfile.cmake  CollisionSystem.c  DisplaySystem.c  InputSystem.c  Makefile  RemoveSystem.c  SpawnSystem.c  cmake_install.cmake
install/src/util/: CTestTestfile.cmake  File.c  JsVariant.c  Json.c  Makefile  String.c  cmake_install.cmake
install/src/vapis/: CTestTestfile.cmake  Makefile  cmake_install.cmake
po/: CMakeLists.txt  POTFILES.in
posix/: glib-hash.h  glib-list.h  glib-string.h  glib.h
posix.1/: ghash.h  glib-hash.h  glib-que.h  glib.h
src/: CMakeLists.txt  Factory.c  Factory.gs  Factory.vala  Game.c  Game.gs  Game.vala  Systems.1.gs  Test.vala  components.gs  demo.c  demo.gs  entitas.c  entitas.gs  entitas0.gs  factory.c  factory.gs  game.gs  hashmap.c  hashmap.gs  main.gs  main.vala  systems.gs  test.gs  test.vala
src.1/: Factory.gs  Factory.vala  Game.gs  Game.vala  Systems.gs  components.gs  main.vala
src.1/entitas/: Matcher.vala  World.vala
src.1/sdx/: Color.gs  Files.vala  Font.vala  sdx.vala
src.1/sdx/graphics/: Surface.vala
src.1/systems/: Animation.gs  AnimationSystem.vala  Collision.gs  CollisionSystem.gs  CollisionSystem.vala  DisplaySystem.vala  ExpireSystem.gs  ExpireSystem.vala  InputSystem.gs  InputSystem.vala  Physics.gs  PhysicsSystem.gs  PhysicsSystem.vala  Remove.gs  RemoveSystem.gs  RemoveSystem.vala  ScoreSystem.vala  SpawnSystem.gs  SpawnSystem.vala
src.1/util/: File.vala  String.vala
src.1/web.src/: index.html  index.js
src.gs/: Factory.gs  Game.gs  components.gs  main.gs
src.gs/entitas/: Group.gs  entitas.gs
src.gs/sdx/: sdx.gs
src.gs/sdx/files/: FileHandle.gs
src.gs/systems/: CollisionSystem.gs  ExpireSystem.gs  RemoveSystem.gs  ScoreSystem.gs  SpawnSystem.gs
src.gs/util/: File.gs
src/entitas/: Cache.gs  Group.vala  Matcher.c  Matcher.gs  World.c  World.gs  entitas.c  entitas.vala
src/include/: emscripten.h
src/liquid/: gs.components.liquid  gs.systems.liquid
src/posix/: glib-hash.h  glib-list.h
src/sdx/: Color.c  Color.gs  Files.c  Files.gs  Font.c  Font.gs  Region.gs.text  sdx.c  sdx.vala
src/sdx/files/: FileHandle.c  FileHandle.vala
src/sdx/graphics/: Sprite.gs  Sprite.vala  Surface.gs
src/systems/: AnimationSystem.c  AnimationSystem.gs  AnimationSystem.vala  Collision.gs  CollisionSystem.gs  CollisionSystem.vala  Display.gs  DisplaySystem.gs  DisplaySystem.vala  Expire.gs  ExpireSystem.c  ExpireSystem.gs  ExpireSystem.vala  Input.gs  InputSystem.gs  InputSystem.vala  Physics.gs  PhysicsSystem.c  PhysicsSystem.gs  PhysicsSystem.vala  Remove.gs  RemoveSystem.c  RemoveSystem.gs  RemoveSystem.vala  Score.gs  ScoreSystem.c  ScoreSystem.gs  ScoreSystem.vala  Spawn.gs  SpawnSystem.c  SpawnSystem.gs  SpawnSystem.vala
src/util/: Cache.c  Cache.vala  File.c  File.gs  File.vala  JsVariant.vala  Json.vala  String.gs
test/: Person.vala  Test.vala  main.gs  main.vala
test/bunny/: Expectation.vala  Should.vala  Test.vala  To.vala  UnitTest.vala  Val.vala
test/test/: Runner.vala
test/util/: Cache.vala
tools/: emcc.coffee  readme.md  valac.coffee
tools/boilerplate/: gs.coffee  index.coffee  vala.1.coffee  vala.coffee
vala/: components.1.gs  components.gs  entities.gs  main.gs  shmupwarz.gs
vala/liquid/: gs.systems.liquid
vala/systems/: CollisionSystem.gs  ExpireSystem.gs  HealthSystem.gs  HudSystem.gs  InputSystem.gs  PhysicsSystem.gs  RemoveSystem.gs  SoundSystem.gs  SpawnSystem.gs  SpriteManagerSystem.gs  TweenSystem.gs
valac2/: build.sh  post.coffee  post.old.coffee  pre  pre.coffee  pre.old.coffee  proc  valac2
vapis/: emscripten.vapi  glib-2.0.vapi  posix.vapi  stdio.vapi
vunny/: Game.gs  TestFX.gs  readme.md  vunny.gs
web/: index.html  index.js
